Finalizando os testes da API
