# src/shared/infra/http/routes/cars.routes.ts
@@ -1,12 +1,24 @@
 import { CreateCarController } from "@modules/cars/useCases/createCar/CreateCarController";
+import { CreateCarSpecificationController } from "@modules/cars/useCases/createCarSpecification/CreateCarSpecificationController";
+import { ListAvailableCarsController } from "@modules/cars/useCases/listAvailableCars/ListAvailableCarsController";
+import { UploadCarImagesController } from "@modules/cars/useCases/uploadCarImages/UploadCarImagesController";
 import { Router } from "express";
 import { ensureAdmin } from "../middlewares/ensureAdmin";
 import { ensureAuthenticated } from "../middlewares/ensureAuthenticated";
-
+import uploadConfig from "@config/upload";
+import multer from "multer";
 
 const carsRoutes = Router();
 
 const createCarController = new CreateCarController();
+const listAvailableCarsController = new ListAvailableCarsController();
+const createCarSpecificationController = new CreateCarSpecificationController();
+const uploadCarImageController = new UploadCarImagesController();
+
+
+
+const upload = multer(uploadConfig.upload("./tmp/cars"));
+
 
 carsRoutes.post(
     "/",
@@ -14,6 +26,32 @@ carsRoutes.post(
     ensureAdmin,
     createCarController.handle
 );
+
+
+carsRoutes.get(
+    "/available",
+    listAvailableCarsController.handle
+);
+
+
+carsRoutes.post(
+    "/specifications/:id",
+    ensureAuthenticated,
+    ensureAdmin,
+    createCarSpecificationController.handle
+);
+
+
+carsRoutes.post(
+    "/images/:id",
+    ensureAuthenticated,
+    ensureAdmin,
+    upload.array("images"),
+    uploadCarImageController.handle
+)
+
+
+
 
 
 export { carsRoutes }
