# src/shared/infra/http/routes/specifications.routes.ts
@@ -3,6 +3,7 @@ import { ListSpecificationsController } from "@modules/cars/useCases/listSpecifi
 import { Router } from "express";
 import { CreateSpecificationController } from "@modules/cars/useCases/createSpecification/CreateSpecificationController";
 import { ensureAuthenticated } from "../middlewares/ensureAuthenticated";
+import { ensureAdmin } from "../middlewares/ensureAdmin";
 
 const specificationsRoutes = Router();
 
@@ -11,9 +12,11 @@ const createSpecificationController = new CreateSpecificationController();
 const listSpecificationsController = new ListSpecificationsController();
 
 
-specificationsRoutes.use(ensureAuthenticated);
-
-specificationsRoutes.post("/", createSpecificationController.handle
+specificationsRoutes.post(
+    "/", 
+    ensureAuthenticated,
+    ensureAdmin,
+    createSpecificationController.handle
     /* #swagger.tags = ['Specification'] */
 );
 
